tests/negative_pomidory/SmokeTest3/NestedSmokeTestFolder/nested_file3.pomidor

!!Used for test_pomidor_run_all_and_nested_dir!!
@Feature CSV_data1
@params delete_cookies, data=pageObjects/csv_data_source.csv
@id CSV_Test_case#1
Navigate to #practice_page and
!!Comment first line - First, click on login_field #practice_menu_button page title
First paragraph: type <<FirstName>> in #name_field.
and type [[Yo!]] in #name_field


!!Used for test_pomidor_run_all_and_nested_dir #2!!
@Feature CSV_data1
@params delete_cookies, data=pageObjects/csv_data_source.csv
@name CSV_Test_case#2
Navigate to #practice_page and
Second paragraph: type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field, and types <<City of
Birth>> in #name_field and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field